minor css fixes (unwanted wrapping, padding) for thermostat scene; also, graph range no longer depends on threshold values even when thermostat is on, so we can see actual values better

--- a/src/static/thermostat_style.css
+++ b/src/static/thermostat_style.css
@@ -96,8 +96,9 @@ canvas {
 #current_values .indoor > div {
   --margin: 10px;
   box-sizing: border-box;
-  padding-top: .3em;
+  padding-top: .4em;
   margin: var(--margin);
+  text-wrap: nowrap;
 }
 
 #current_values .indoor .temp {
